Navbar: Fix overlapping text on profile username

--- a/stencil-workspace/src/components/modus-navbar/profile-menu/modus-navbar-profile-menu.scss
+++ b/stencil-workspace/src/components/modus-navbar/profile-menu/modus-navbar-profile-menu.scss
@@ -47,7 +47,7 @@
       .username {
         font-size: $rem-16px;
         font-weight: $font-weight-semi-bold;
-        overflow-wrap: break-word;
+        overflow-wrap: anywhere;
         text-align: center;
         width: fit-content;
       }
